<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/_270sdp"
    android:layout_height="@dimen/_176sdp"
    android:layout_gravity="center"
    android:background="@drawable/white_corner_rounded_bg"
    android:padding="@dimen/_12sdp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/_36sdp"
        android:layout_height="@dimen/_36sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alert"
        android:textColor="@color/lightBlackColor"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/tvDetail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:gravity="center"
        android:text="@string/want_to_exit_app"
        android:textColor="@color/lightBlackColor"
        android:textSize="@dimen/_12sdp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@id/tvDone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <TextView
        android:id="@+id/tvDone"
        android:layout_width="@dimen/_84sdp"
        android:layout_height="@dimen/_32sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:background="@drawable/btn_rounded_gradient_bg"
        android:gravity="center"
        android:text="@string/ok"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>