<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/_270sdp"
    android:layout_height="@dimen/_166sdp"
    android:layout_gravity="center"
    android:background="@drawable/white_corner_rounded_bg"
    android:padding="@dimen/_12sdp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/_36sdp"
        android:layout_height="@dimen/_36sdp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/tvDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_6sdp"
        android:text="@string/please_choose_one"
        android:textColor="@color/lightBlackColor"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView" />

    <ImageView
        android:id="@+id/ivClose"
        android:layout_width="@dimen/_28sdp"
        android:layout_height="@dimen/_28sdp"
        android:padding="@dimen/_8sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_close_black" />

    <TextView
        android:id="@+id/tvCamera"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/btn_rounded_gradient_bg"
        android:gravity="center"
        android:text="@string/camera"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvGallery"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDetail" />

    <TextView
        android:id="@+id/tvGallery"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/btn_rounded_gradient_bg"
        android:gravity="center"
        android:text="@string/gallery"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintBottom_toBottomOf="@id/tvCamera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvCamera"
        app:layout_constraintTop_toTopOf="@+id/tvCamera" />

</androidx.constraintlayout.widget.ConstraintLayout>