<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.forgetpassword.ForgetPasswordActivity">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.example.marketix.presentation.forgetpassword.ForgetPasswordViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/back_color">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="@dimen/_24sdp"
            android:paddingEnd="@dimen/_24sdp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="62dp">

            <TextView
                android:id="@+id/tv_welcome"
                fontPath="fonts/NexaBold.otf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="59dp"
                android:text="Reset Your Password"
                android:textColor="@color/whiteColor"
                android:textSize="@dimen/_20ssp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_email_title"
                fontPath="fonts/NexaBold.otf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_64sdp"
                android:gravity="center"
                android:text="@string/text_email_here"
                android:textColor="@color/greenTitleColor"
                android:textSize="@dimen/_13ssp"
                android:textStyle="normal"
                android:visibility="@{viewModel.viewCondition == 1? View.VISIBLE : View.GONE}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_welcome" />

            <TextView
                android:id="@+id/tv_otp_title"
                fontPath="fonts/NexaBold.otf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_64sdp"
                android:gravity="center"
                android:text="@string/enter_otp_pin"
                android:textColor="@color/greenTitleColor"
                android:textSize="@dimen/_13ssp"
                android:textStyle="normal"
                android:visibility="@{viewModel.viewCondition == 2? View.VISIBLE : View.GONE}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_welcome" />

            <TextView
                android:id="@+id/tv_password_title"
                fontPath="fonts/NexaBold.otf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_64sdp"
                android:gravity="center"
                android:text="@string/enter_new_password"
                android:textColor="@color/greenTitleColor"
                android:textSize="@dimen/_13ssp"
                android:textStyle="normal"
                android:visibility="@{viewModel.viewCondition == 3? View.VISIBLE : View.GONE}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_welcome" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="tv_email_title,tv_otp_title, tv_password_title" />

            <TextView
                android:id="@+id/tv_email_description"
                fontPath="fonts/NexaBold.otf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:gravity="center"
                android:text="@string/text_forget_password_dec"
                android:textColor="@color/whiteDimColor"
                android:textSize="@dimen/_11ssp"
                android:textStyle="normal"
                android:visibility="@{viewModel.viewCondition == 1? View.VISIBLE : View.GONE}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/barrier0" />

            <TextView
                android:id="@+id/tv_otp_description"
                fontPath="fonts/NexaBold.otf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:gravity="center"
                android:text="@string/text_email_verification_dec"
                android:textColor="@color/whiteDimColor"
                android:textSize="@dimen/_11ssp"
                android:textStyle="normal"
                android:visibility="@{viewModel.viewCondition == 2? View.VISIBLE : View.GONE}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/barrier0" />

            <TextView
                android:id="@+id/tv_password_description"
                fontPath="fonts/NexaBold.otf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:gravity="center"
                android:text="@string/text_reset_password_dec"
                android:textColor="@color/whiteDimColor"
                android:textSize="@dimen/_11ssp"
                android:textStyle="normal"
                android:visibility="@{viewModel.viewCondition == 3? View.VISIBLE : View.GONE}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/barrier0" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="tv_email_description,tv_otp_description, tv_password_description" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_32sdp"
                android:paddingStart="@dimen/_2sdp"
                android:text="@string/text_email"
                android:textColor="#CDD5DF"
                android:textSize="@dimen/_12sdp"
                android:visibility="@{viewModel.viewCondition == 1? View.VISIBLE : View.GONE}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/barrier1" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_otp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_32sdp"
                android:paddingStart="@dimen/_2sdp"
                android:text="@string/text_pin"
                android:textColor="#CDD5DF"
                android:textSize="@dimen/_12sdp"
                android:visibility="@{viewModel.viewCondition == 2? View.VISIBLE : View.GONE}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/barrier1" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="tv_email,tv_otp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_4sdp"
                android:background="@drawable/edit_light_rounded_bg"
                android:hint="@string/hint_enter_email_address"
                android:inputType="textAutoComplete"
                android:paddingStart="@dimen/_8sdp"
                android:paddingEnd="@dimen/_28sdp"
                android:text="@={viewModel.email}"
                android:textColor="@color/whiteColor"
                android:textColorHint="@color/gray_light_hint_color"
                android:textSize="@dimen/_12sdp"
                android:visibility="@{viewModel.viewCondition == 1? View.VISIBLE : View.GONE}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/barrier2" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_otp"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_4sdp"
                android:background="@drawable/edit_light_rounded_bg"
                android:hint="@string/enter_otp_pin"
                android:inputType="textAutoComplete"
                android:paddingStart="@dimen/_8sdp"
                android:paddingEnd="@dimen/_28sdp"
                android:text="@={viewModel.otpCode}"
                android:textColor="@color/whiteColor"
                android:textColorHint="@color/gray_light_hint_color"
                android:textSize="@dimen/_12sdp"
                android:visibility="@{viewModel.viewCondition == 2? View.VISIBLE : View.GONE}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/barrier2" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_32sdp"
                android:paddingStart="@dimen/_2sdp"
                android:text="@string/text_password"
                android:textColor="#CDD5DF"
                android:textSize="@dimen/_12sdp"
                android:visibility="@{viewModel.viewCondition == 3? View.VISIBLE : View.GONE}"
                app:layout_constraintStart_toStartOf="@id/et_password"
                app:layout_constraintTop_toBottomOf="@id/barrier1" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_4sdp"
                android:background="@drawable/edit_light_rounded_bg"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:paddingStart="@dimen/_8sdp"
                android:paddingEnd="@dimen/_28sdp"
                android:text="@={viewModel.newPassword}"
                android:textColor="@color/whiteColor"
                android:textColorHint="@color/gray_light_hint_color"
                android:textSize="@dimen/_12sdp"
                android:visibility="@{viewModel.viewCondition == 3? View.VISIBLE : View.GONE}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_password" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_confirm_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_8sdp"
                android:paddingStart="@dimen/_2sdp"
                android:text="@string/text_confirm_password"
                android:textColor="#CDD5DF"
                android:textSize="@dimen/_12sdp"
                android:visibility="@{viewModel.viewCondition == 3? View.VISIBLE : View.GONE}"
                app:layout_constraintStart_toStartOf="@id/et_confirm_password"
                app:layout_constraintTop_toBottomOf="@id/et_password" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_4sdp"
                android:background="@drawable/edit_light_rounded_bg"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:paddingStart="@dimen/_8sdp"
                android:paddingEnd="@dimen/_28sdp"
                android:text="@={viewModel.newConfirmPassword}"
                android:textColor="@color/whiteColor"
                android:textColorHint="@color/gray_light_hint_color"
                android:textSize="@dimen/_12sdp"
                android:visibility="@{viewModel.viewCondition == 3? View.VISIBLE : View.GONE}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_confirm_password" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_recover_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"

                android:layout_marginBottom="@dimen/_16sdp"
                android:background="@drawable/btn_rounded_gradient_bg"
                android:drawableTint="@color/colorOrange"
                android:gravity="center"
                android:onClick="@{()->viewModel.recoverPasswordClick()}"
                android:text="@string/text_recover_password"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <include xmlns:bind="http://schemas.android.com/apk/res-auto"
            android:id="@+id/llProgressBar"
            layout="@layout/loading_progress_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            bind:progressViewModel="@{((com.example.marketix.di.builder.BaseViewModel) viewModel)}" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>